chore: Static analysis fixes